Restore instance service account key issuance
